--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-intl": "^4.3.9",
     "next-themes": "latest",
     "openai": "^4.103.0",
     "prisma": "^6.8.2",
